--- a/Frontend/Views/admin.appointment.html
+++ b/Frontend/Views/admin.appointment.html
@@ -63,7 +63,7 @@
         <div class="board">
             <table width="100%">
                 <thead>
-                    <tr >
+                    <tr style="height: 40px; text-align: center; font-weight: bold;">
                         <td>Image</td>
                         <td>Service</td>
                         <td>Name [Customer ID]</td>
@@ -73,7 +73,7 @@
                         <td>Accept / Reject</td>
                     </tr>
                 </thead>
-                <tbody id="appointmentntbody">
+                <tbody id="appointmentntbody" style="text-align: center;">
 
                 </tbody>
             </table>
